# lblpwgtools

./: .gitignore  Axes.cxx  Binning_8h_source.html  CMakeLists.txt  Cut_8h_source.html  Doxyfile  EigenUtils.cxx  EigenUtils.h  EnsembleRatio_8h_source.html  EnsembleReweightableSpectrum_8h_source.html  EnsembleSpectrum_8h_source.html  FitMultiverse_8h_source.html  FitVarWithPrior_8h_source.html  FixupRecord_8h_source.html  HistAxis_8h_source.html  IFitVar_8h_source.html  IRecordSink_8h_source.html  IRecordSource_8h_source.html  ISyst_8h_source.html  LoadFromFile_8h_source.html  Loaders_8h_source.html  MathUtil_8h_source.html  ModeConversionUtilities_8h_source.html  MultiVar_8h_source.html  Multiverse_8h_source.html  OscCalcFwdDeclare_8h_source.html  OscCurve_8h_source.html  OscillatableSpectrum_8h_source.html  PRISMAnalysisDefinitions.cxx  PRISMAnalysisDefinitions.h  PRISMDetectorExtrapolation.cxx  PRISMDetectorExtrapolation.h  PRISMExtrapolator.cxx  PRISMExtrapolator.h  PRISMMCEffCorrection.cxx  PRISMMCEffCorrection.h  PRISMUtils.cxx  PRISMUtils.h  PredictionPRISM.cxx  PredictionPRISM.h  (+104 more)
CAFAna/: .gitignore  CAFBuildScript.sh  CMakeLists.txt  Dockerfile  Doxyfile  README.md  StandardRecord  build_docker_image.sh  buildah_image.sh  cafe  cafe_dune  load_libs.C  load_libs_dune.C  pion_multiplicity_cheated.sh  pnfs_setup.sh  standalone_configure_and_build.sh  support_software.sh
CAFAna/.github/: doxygen-gh-pages.yml
CAFAna/2x2_mesonless_analysis/: mesonless_cuts.h  mesonless_histaxis.h  mesonless_main.C  mesonless_vars.h
CAFAna/Analysis/: AnalysisBinnings.cxx  AnalysisDialGroups.h  AnalysisVars.cxx  AnalysisVars.h  AnalysisVersion.cxx  AnalysisVersion.h  CMakeLists.txt  Calcs.cxx  Calcs.h  CalcsNuFit.cxx  CalcsNuFit.h  CalcsNuFit_cdr.cxx  CalcsNuFit_cdr.h  CalcsVars.h  CheckPointHelper.h  Exposures.h  ExtraHeaders.h  Fit.cxx  Fit.h  Plots.cxx  Plots.h  RefineSeeds.cxx  Resolution.cxx  Resolution.h  SeedList.h  SpectrumComponents.cxx  SpectrumComponents.h  Style.h  Surface.cxx  Surface.h  TDRLoaders.cxx  XSecSystList.cxx  common_fit_definitions.cxx  common_fit_definitions.h
CAFAna/Atmos/: AtmosOscSpect.cxx  AtmosOscSpect.h  AtmosOscillogram.cxx  AtmosOscillogram.h  AtmosOscillogramLE.cxx  AtmosOscillogramLE.h  CMakeLists.txt  PredictAtmos.cxx  PredictAtmos.h
CAFAna/Core/: .SpectrumLoader.cxx.swp  Binning.cxx  Binning.h  CMakeLists.txt  Cut.cxx  Cut.h  EnsembleRatio.cxx  EnsembleRatio.h  EnsembleReweightableSpectrum.cxx  EnsembleReweightableSpectrum.h  EnsembleSpectrum.cxx  EnsembleSpectrum.h  EnsembleSpectrumMerger.cxx  EnsembleSpectrumMerger.h  FileListSource.h  FitMultiverse.h  FitVarWithPrior.h  FitqunConverter.cxx  FitqunConverter.h  FixupRecord.cxx  FixupRecord.h  FwdDeclare.h  Hist.cxx  Hist.h  HistAxis.cxx  HistAxis.h  HistCache.cxx  HistCache.h  IFileSource.h  IFitVar.cxx  IFitVar.h  IRecordSink.h  IRecordSource.cxx  IRecordSource.h  ISyst.cxx  ISyst.h  Instantiations.cxx  LoadFromFile.cxx  LoadFromFile.h  Loaders.cxx  (+53 more)
CAFAna/Cuts/: AnaCuts.cxx  AnaCuts.h  CMakeLists.txt  TruthCuts.cxx  TruthCuts.h
CAFAna/Decomp/: CMakeLists.txt  IDecomp.cxx  IDecomp.h  NumuDecomp.cxx  NumuDecomp.h
CAFAna/Experiment/: BinnedLkhdExperiment.cxx  BinnedLkhdExperiment.h  CMakeLists.txt  CountingExperiment.cxx  CountingExperiment.h  CovMxChiSq.cxx  CovMxChiSqPreInvert.cxx  CovMxChiSqPreInvert.h  CovMxLL.h  CovarianceExperiment.cxx  CovarianceExperiment.h  IChiSqExperiment.cxx  IChiSqExperiment.h  ICovarianceMatrix.cxx  ICovarianceMatrix.h  IExperiment.cxx  IExperiment.h  ILkhdExperiment.cxx  ILkhdExperiment.h  MultiExperiment.cxx  MultiExperiment.h  ReactorExperiment.cxx  ReactorExperiment.h  SingleSampleExperiment.cxx  SingleSampleExperiment.h  SolarConstraints.cxx  SolarConstraints.h
CAFAna/Extrap/: CMakeLists.txt  FDExtrap.cxx  FDExtrap.h  IExtrap.cxx  IExtrap.h  ModularExtrap.cxx  ModularExtrap.h  ModularExtrapComponent.cxx  ModularExtrapComponent.h  NDExtrap.cxx  NDExtrap.h  TrivialExtrap.cxx  TrivialExtrap.h
CAFAna/Fit/: Bayesian1DMarginal.cxx  Bayesian1DMarginal.h  BayesianMarginal.cxx  BayesianMarginal.h  BayesianSurface.cxx  BayesianSurface.h  CMakeLists.txt  Fit.cxx  Fit.h  FrequentistSurface.cxx  FrequentistSurface.h  GradientDescent.cxx  GradientDescent.h  IFitter.cxx  IFitter.h  ISurface.cxx  ISurface.h  MCMCSample.cxx  MCMCSample.h  MCMCSamples.cxx  MCMCSamples.h  MinuitFitter.cxx  MinuitFitter.h  Priors.cxx  Priors.h  RefineSeeds.cxx  RefineSeeds.h  SeedList.cxx  SeedList.h  StanConfig.h  StanFitter.cxx  StanFitter.h  Surface.cxx
CAFAna/GAr/: CMakeLists.txt  GArParams.cxx  GArParams.h  GArTruthCuts.cxx  GArTruthCuts.h  GArUtils.cxx  GArUtils.h
CAFAna/GArAnaGrid/: launch_job.sh  make_tarball.sh  numuCC_selection_optimization.sh  numuCC_selection_raw.sh  pion_multiplicity_optimization.sh  run_script.sh  setup_grid.sh
CAFAna/GArAnaScripts/: GArUtils.h  numuCC_1p_selection.C  numuCC_selection_kinematics.C  numuCC_selection_optimization.C  numuCC_selection_raw.C  numuCC_selection_wrongsign.C  pid_scores.C  pion_kinetic.C  pion_multiplicity_cheated.C  pion_multiplicity_optimization.C
CAFAna/GArTKI/: CMakeLists.txt  GArTKIBase.cxx  GArTKIBase.h  GArTKINp0pi.cxx  GArTKINp0pi.h  GArTKIuBooNE.cxx  GArTKIuBooNE.h
CAFAna/PRISM/: Axes.cxx  Axes.h  CMakeLists.txt  Cuts.cxx  Cuts.h  EffectiveFluxUncertaintyHelper.cxx  EffectiveFluxUncertaintyHelper.h  EigenUtils.cxx  EigenUtils.h  PRISMAnalysisDefinitions.cxx  PRISMAnalysisDefinitions.h  PRISMDetectorExtrapolation.cxx  PRISMDetectorExtrapolation.h  PRISMExtrapolator.cxx  PRISMExtrapolator.h  PRISMMCEffCorrection.cxx  PRISMMCEffCorrection.h  PRISMReweightableSpectrum.cxx  PRISMUtils.cxx  PRISMUtils.h  PredictionPRISM.cxx  PredictionPRISM.h  (+10 more)
app/: CMakeLists.txt  EventLoop.C  MakePRISMPredInterps.C  NewPRISMPred_4Feb.C  OffAxisEventRates.C  OffAxisNDCAFCombiner.C  PRISMDChi2Scan.C  PRISMExtrapRegOptimizer.C  PRISMPrediction.C  PRISMRegOptimizer.C  PRISMSystThrows.C  PRISM_4Flavour_dChi2Scan.C  PRISM_NumuDisp_dChi2Scan.C
scripts/: BuildOffAxisInputs.sh  BuildPredInterps.sh  CMakeLists.txt  hadd_fits.C  hadd_sumstate.C
(+1670 files in other folders)
